[project]
name = "impact-stack-docs"
dynamic = ["version"]
dependencies = [
  "guzzle-sphinx-theme",
  "pip-tools",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pip-tools >= 6.1.0",
  "pre-commit",
  "pydocstyle[toml] >= 6",
  "pylint",
  "pytest",
  "pytest-cov",
]

[build-system]
requires = [
  "setuptools>=45",
  "setuptools-scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools_scm]

[tool.black]
line-length = 100

[tool.coverage.run]
source = []
relative_files = true

[tool.coverage.report]
fail_under = 90

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.pydocstyle]
convention = "google"

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term --cov-report=xml --junitxml=pytest-junit.xml"
python_classes = [
  "*Test",
  "Test*",
]
